# geonamestools

./: .gitignore  Cargo.toml  README.md
src/: data.rs  lib.rs  mysqlwriter.rs  parser.rs  sqlitewriter.rs
test_data/: test_cities.txt
