[package]
name = "geonamestools"
version = "0.1.0"
authors = ["Davide Del Papa <davidedelpapa@gmail.com>"]
license = "MIT"
description = "Library and CLI tool to use data from GeoNames.org"
readme = "README.md"
homepage = "https://github.com/davidedelpapa/geonamestools"
repository = "https://github.com/davidedelpapa/geonamestools"
keywords = ["cli", "gis", "geonames", "science"]
categories = ["science"]
edition = "2018"
default-run = "gntools"


[lib]
name = "geonames"
path = "src/lib.rs"

[[bin]]
name = "gntools"
path = "src/bin/bin.rs"

[[bin]]
name = "gntools-mysql"
path = "src/bin/bin-mysql.rs"

[dependencies]
csv = "1.1"
structopt = "0.2.10"
serde = "1"
serde_derive = "1"
rusqlite = "0.23"
mysql = "*"
chrono = { version = "0.4", features = ["serde"] }